fix(styles): prevent h3 text wrapping inside grid cards, in Firefox
- sets width to max-content for h3 elements inside project cards
  to prevent unexpected text wrapping when h3 is already a grid item
  self aligned to center, with enough room in its correspondant cell.
  Strange behavior in Firefox only Chromium worked fine.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -141,6 +141,7 @@
     }
 
     h3 {
+      width: max-content;
       margin-left: 20px;
     }
   }
